# nakafa.com

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTENT_LICENSE.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  agent-docs.config.yml  biome.json  biome.jsonc  bun.lockb  components.json  doctor.config.json  global.d.ts  mdx-components.tsx  middleware.ts  next.config.mjs  next.config.ts  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  search.py  search2.py  skills-lock.json  squirrel.toml  tailwind.config.ts  tsconfig.json  turbo.json
.changeset/: better-items-fry.md  clean-poems-itch.md  clean-socks-give.md  config.json  easy-bobcats-matter.md  easy-lemons-serve.md  easy-needles-camp.md  easy-radios-join.md  humble-swans-relate.md  jolly-bushes-camp.md  loud-parrots-thank.md  many-ravens-pull.md  moody-eagles-cheat.md  purple-geese-watch.md  real-papers-rest.md  rich-baths-remain.md  seven-worlds-kick.md  shaggy-moles-wash.md  (+7 more)
apps/cas/: .env.example  package.json  pyproject.toml  vercel.json  vercel.ts
apps/cas/api/: __init__.py  index.py
apps/cas/cas/: __init__.py  algebra.py  auth.py  calculus.py  discrete.py  engine.py  equation.py  format.py  geometry.py  matrix.py  parse.py  probability.py  schema.py  series.py  stat.py
apps/cas/scripts/: api_poc.py
apps/cas/tests/: algebra_test.py  calculus_test.py  discrete_test.py  engine_test.py  equation_test.py  format_test.py  geometry_test.py  index_test.py  matrix_test.py  other_test.py  parse_test.py  probability_test.py  series_test.py  stat_test.py
types/: toc.ts  (+7 more)
(+3078 files in other folders)
