[project]
name = "nakafa-cas"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.2",
  "sympy>=1.14.0",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.34.0",
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = [
  "-p",
  "no:cacheprovider",
  "--cov=api",
  "--cov=cas",
  "--cov-branch",
  "--cov-fail-under=100",
  "--cov-report=term-missing",
]
python_files = ["*_test.py"]
pythonpath = ["."]
testpaths = ["tests"]


[tool.basedpyright]
include = ["api", "cas", "tests"]
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."
